_rendered/apps/hello-world-simple/service-hello-world-simple.yaml
# Source: hello-world-simple/charts/hello-world/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-simple
  labels:
    helm.sh/chart: hello-world-0.1.0
    app.kubernetes.io/name: hello-world
    app.kubernetes.io/instance: hello-world-simple
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hello-world
    app.kubernetes.io/instance: hello-world-simple
