_rendered/apps/hello-world-simple/cilium_io-ciliumnetworkpolicy-hello-world-simple-preset-cnp.yaml
# Source: hello-world-simple/charts/networkpolicy/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: hello-world-simple-preset-cnp
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
